Revision history for Data-Validate-Sanctions

{{$NEXT}}

0.11      2018-07-11 14:40:36+08:00 Asia/Manila
        Update cached list only on update any of the lists. Handle network errors.
        Use YAML to store cached lists, to have some metadata. Store this file in `share` by default.
        Use regex for name checking.
        Added get_sanctioned_info to return detailed info on match.
        Fix perlcritic warning

0.10      2017-03-31 03:30:51+00:00 UTC
          move scripts to bin directory

0.09      2017-03-30 04:09:04+00:00 UTC
          check for undefined before processing

0.08      2017-02-28 02:15:18+00:00 UTC
          add UK sanctions list

0.07      2017-02-27 08:18:01+00:00 UTC
          remove logs to tmp directory

0.06      2017-02-20 02:47:39+00:00 UTC
     switch to dzil
0.05

0.04  2016-11-15 11:44:58 CST
        - update URL list

0.03  2014-09-27 09:15:23 CST
        - rename module from Data::Validate::Terrorist to Data::Validate::Sanctions

0.02  2014-09-26 16:39:56 CST
        - supports (first_name, last_name) also

0.01  2014-09-26 16:04:05 CST
        - Initial release